tests/machine/x/fs/in_operator_extended.fs
// Generated by Mochi compiler v0.10.27 on 2025-07-17T07:47:19Z
open System

type Anon1 = {
    a: int
}
let xs: int list = [1; 2; 3]
let ys: int list = [ for x in xs do if x % 2 = 1 then yield x ]
printfn "%b" (List.contains 1 ys)
printfn "%b" (List.contains 2 ys)
let m: Anon1 = { a = 1 }
printfn "%s" (m.Contains("a"))
printfn "%s" (m.Contains("b"))
let s: string = "hello"
printfn "%s" (s.Contains("ell"))
printfn "%s" (s.Contains("foo"))
